--- a/servithenEN/htmlEN/presentationEN.html
+++ b/servithenEN/htmlEN/presentationEN.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
+    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
     <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenEN/jsEN/confianceEN.js"></script>
+    <script  src="/servithenEN/jsEN/confianceEN.js"></script>
 
 </head>
 
@@ -23,11 +23,12 @@
         <div class="navbar">
 
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png "></a>
+            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
 
-            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
+
 
 
             <div class="dropdown">
@@ -131,14 +132,14 @@
             </p>
             <p class="presentation"> · Furnaces,<br><br> · Flue gas scrubbers for dust reduction and acid gas neutralization,<br><br> · Wet electrostatic filters allowing high dust collection efficiencies,<br><br> Units dry treatment of incineration fumes,<br><br> · Installations
                 for the treatment of volatile organic compounds (VOC), odors or deNOx treatment.
-            </p class="presentation">
+            </p>
             <p class="presentation"> The SERVITHEN Company was awarded the Gazelle 2005 label by the Minister of SMEs, Trade, Crafts and Liberal Professions, Mr. Renaud DUTREIL. This trophy rewards 2,000 French companies out of 1.2 million SME. The gazelles selected are the SMEs
                 which grew during the period studied from 1993 to 2003, i.e. two or three times faster than those in the same sector of activity, i.e. those which are in the top 5 or 10% of their population in terms of of growth and which have a higher
                 profitability than that of their counterparts. The objective of this government program is to help maintain the rapid growth of these most dynamic SMEs. In particular, by mobilizing all the skills to enable them to support their growth,
                 in particular by enriching their relational network, and by giving them access to specific offers from partners, among other financiers</p>
 
             <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
-            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg">
+            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg" alt="photo prix gazette">
 
         </div>
     </section>
@@ -155,66 +156,64 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <section class="customer-logos2 slider2">
-                <div class="slide2"><img src="/img/partenaire/lechler_logo.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png"></div>
-                <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
-            </section>
+            <div class="customer-logos2 slider2">
+                <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
+                <div class="slide2"><img src="/img/partenaire/someflu.png" alt="logo partenaire someflu"></div>
+            </div>
         </div>
 
 
 
         <div class="container">
             <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-            <section class="customer-logos slider">
-                <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
-                <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
-            </section>
+            <div class="customer-logos slider">
+                <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
+                <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png" alt="logo confiance orange"></div>
+                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png" alt="logo confiance veolia"></div>
+                <div class="slide"><img src="/img/LogoConfiance/ocp.png" alt="logo confiance ocp"></div>
+                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png" alt="logo confiance orano"></div>
+                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg" alt="logo confiance sgd-pharma"></div>
+                <div class="slide"><img src="/img/LogoConfiance/siaap.png" alt="logo confiance siaap"></div>
+                <div class="slide"><img src="/img/LogoConfiance/suez.png" alt="logo confiance suez"></div>
+                <div class="slide"><img src="/img/LogoConfiance/valorhin.png" alt="logo confiance valorhin"></div>
+            </div>
         </div>
 
+    </div>
         <!-- bas de la page avec les coordonnées -->
+
 
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordinated :</h4>
+                <h4>Contact information :</h4>
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
                 <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
                 <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
+                <a target="_blank"  class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
                 <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
-
-
-
-
 
 
         </footer>
