--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
+    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
     <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script src="/servithenFR/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -23,11 +23,12 @@
         <div class="navbar">
 
 
-            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
+            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+                <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
 
-            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+                <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
+
 
 
             <div class="dropdown">
@@ -129,14 +130,14 @@
             </p>
             <p class="presentation"> · Des fours,<br><br> · Des laveurs de fumées pour l'abattement des poussières et la neutralisation des gaz acides,<br><br> · Des filtres électrostatiques humides permettant des rendements élevés de captation des poussières,<br><br> · Des unités
                 de traitement sec de fumées d'incinération,<br><br> · Des installations de traitement de composés organiques volatiles (COV), d'odeurs ou de traitement deNOx.
-            </p class="presentation">
+            </p >
             <p class="presentation"> La Société SERVITHEN s’est vu décerner le label Gazelle 2005 par le ministre des PME, du commerce, de l’artisanat et des professions libérales, Monsieur Renaud DUTREIL. Ce trophée récompense 2.000 Entreprises françaises sur 1,2 millions de
                 PME. Les gazelles retenues sont les PME qui croissent pendant la période étudiée de 1993 à 2003, soit deux ou trois plus vite que celles du même secteur d’activité, soit celles qui sont dans le top 5 où 10 % de leur population en termes
                 de croissance et qui, ont une rentabilité supérieure à celle de leurs homologues. L’objectif de ce programme gouvernemental est de favoriser le maintien de la croissance rapide de ces PME les plus dynamiques. Notamment, en mobilisant toutes
                 les compétences pour leurs permettre de soutenir leur croissance, en particulier en enrichissant leur réseau relationnel, et en leur donnant accès à des offres spécifiques de partenaires, entre autres financiers</p>
 
             <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
-            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg">
+            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg" alt="photo prix gazette">
         </div>
     </section>
 
@@ -153,68 +154,62 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <section class="customer-logos2 slider2">
-                <div class="slide2"><img src="/img/partenaire/lechler_logo.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png"></div>
-                <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
-            </section>
+            <div class="customer-logos2 slider2">
+                <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
+                <div class="slide2"><img src="/img/partenaire/someflu.png" alt="logo partenaire someflu"></div>
+            </div>
         </div>
 
 
 
         <div class="container">
             <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-            <section class="customer-logos slider">
-                <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
-                <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
-            </section>
+            <div class="customer-logos slider">
+                <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
+                <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png" alt="logo confiance orange"></div>
+                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png" alt="logo confiance veolia"></div>
+                <div class="slide"><img src="/img/LogoConfiance/ocp.png" alt="logo confiance ocp"></div>
+                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png" alt="logo confiance orano"></div>
+                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg" alt="logo confiance sgd-pharma"></div>
+                <div class="slide"><img src="/img/LogoConfiance/siaap.png" alt="logo confiance siaap"></div>
+                <div class="slide"><img src="/img/LogoConfiance/suez.png" alt="logo confiance suez"></div>
+                <div class="slide"><img src="/img/LogoConfiance/valorhin.png" alt="logo confiance valorhin"></div>
+            </div>
         </div>
 
-
+    </div>
         <!-- bas de la page avec les coordonnées -->
-
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonné :</h4>
+                <h4>Coordonnées :</h4>
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
                 <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png"  alt="logo mail ">
                 <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png"  alt="logo linkedin ">
+                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png"  alt="logo position ">
                 <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
-
-
-
-
-
 
         </footer>
 </body>
