--- a/servithenEN/htmlEN/MentionsLegalesEN.html
+++ b/servithenEN/htmlEN/MentionsLegalesEN.html
@@ -153,7 +153,7 @@
 
 
         <div class="container">
-            <h2 class="text-center font-weight-bold">trust us :</h2>
+            <h3 class="text-center font-weight-bold">They trust us :</h3>
             <section class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
