--- a/servithenFR/htmlFR/MentionsLegales.html
+++ b/servithenFR/htmlFR/MentionsLegales.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
+    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
     <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script src="/servithenFR/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -25,11 +25,11 @@
             <div class="navbar">
 
 
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
+                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo servithen"></a>
 
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
 
-                <a href="/servithenEN/htmlEN/MentionsLegalesEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+                <a href="/servithenEN/htmlEN/MentionsLegalesEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
 
 
 
@@ -146,29 +146,29 @@
                 <div class="sphère"></div>
             </div>
             <section class="customer-logos2 slider2">
-                <div class="slide2"><img src="/img/partenaire/lechler_logo.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png"></div>
-                <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
+                <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo lechler"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo neu"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo siemens"></div>
+                <div class="slide2"><img src="/img/partenaire/someflu.png" alt="logo someflu"></div>
             </section>
         </div>
 
 
 
         <div class="container">
-            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <h3 class="text-center font-weight-bold">nous font confiance :</h3>
             <section class="customer-logos slider">
-                <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
-                <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo artelia"></div>
+                <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo guerbet"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo constellium"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png" alt="logo orange"></div>
+                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png" alt="logo veolia"></div>
+                <div class="slide"><img src="/img/LogoConfiance/ocp.png" alt="logo ocp"></div>
+                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png" alt="logo orano"></div>
+                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg" alt="logo sgd-pharma"></div>
+                <div class="slide"><img src="/img/LogoConfiance/siaap.png" alt="logo siaap"></div>
+                <div class="slide"><img src="/img/LogoConfiance/suez.png" alt="logo suez"></div>
+                <div class="slide"><img src="/img/LogoConfiance/valorhin.png" alt="logo valorhin"></div>
             </section>
         </div>
 
@@ -181,22 +181,22 @@
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone">
                 <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail">
                 <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin">
+                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position">
                 <a target="_blank" class="footerp" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
