--- a/servithenFR/htmlFR/serviceFR/modifservice4.html
+++ b/servithenFR/htmlFR/serviceFR/modifservice4.html
@@ -27,7 +27,7 @@
 
 
         
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+                <a href="/servithenEN/htmlEN/modifaccueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
                 <button>Confirmer les changements</button>
                 <textarea name="serv">4</textarea>
                 <a href="/servithenFR/htmlFR/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
@@ -37,7 +37,7 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/servithenFR/htmlFR/modifformFR.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -45,7 +45,7 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="appli.html">MyPartner</a>
+                        <a href="modifappli.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
@@ -53,27 +53,27 @@
                 <div class="dropdown">
                     <button class="dropbtn">SERVICES 
                   </button>
-                    <div class="dropdown-content3">
-                        <a href="service1.html">Audits et Expertises d’installations</a>
-                        <a href="service2.html">Remise aux normes réglementaire </a>
-                        <a href="service3.html">Valorisation énergétique</a>
-                        <a href="service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="service5.html">Maintenance préventive / curative</a>
-                    </div>
+                  <div class="dropdown-content3">
+                    <a href="/servithenFR/htmlFR//serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
+                    <a href="/servithenFR/htmlFR//serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
+                    <a href="/servithenFR/htmlFR//serviceFR/modifservice3.html">Valorisation énergétique</a>
+                    <a href="/servithenFR/htmlFR//serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/servithenFR/htmlFR//serviceFR/modifservice5.html">Maintenance préventive / curative</a>
+                </div>
                 </div>
 
                 <div class="dropdown">
                     <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifVenturiFR.html">Venturi</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifElectroFR.html">Electrofiltres humides / secs</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifFiltresFR.html">Filtres à manches</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifInstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifRecuperationFR.html">Récupération d’énergie</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifFournitureFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
@@ -81,7 +81,7 @@
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
+                        <a href="/servithenFR/htmlFR/modifpresentationFR.html">Présentation</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
@@ -89,7 +89,7 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/servithenFR/htmlFR/modifaccueilFR.html">ACCUEIL</a>
 
                 </div>
 
