--- a/test/en/index.html
+++ b/test/en/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logo.png " type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -22,7 +22,7 @@
 
         <div class="navbar">
 
-            <a href="/en/index.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
+            <a href="/en/index.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
 
             <a href="/fr/index.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
@@ -122,7 +122,15 @@
             </div>
             <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
                 to your needs.</p>
-            <h4>Nos services :</h4>
+            <h3>Nos services :</h3>
+
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
+
             <div class="flex">
                 <div class="hover" id="carteSection1">
                     <div class="card2">
@@ -149,7 +157,16 @@
                             class="middle" alt="photo des services"></div>
                 </div>
             </div>
-            <h4>Our products :</h4>
+
+            <h3>Our products :</h3>
+
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
+
             <div class="flex">
                 <div class="hover" id="carteProduit1">
                     <div class="card2">
@@ -194,7 +211,15 @@
                 </div>
             </div>
 
-            <h4>industry 4.0 :</h4>
+            <h3>industry 4.0 :</h3>
+
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
+
             <div class="flex">
                 <video width="500" height="320" controls>
                         <source src="/video/PrésentationMP.mp4" type="video/mp4">
